force-app/main/default/objects/Projeto__c/Projeto__c.object-meta.xml
<CustomObject>
    <description>Responsável pelo cadastro de projetos.</description>
    <label>Projeto</label>
    <nameField>
        <label>Nome do projeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projetos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>