force-app/main/default/objects/Projeto__c/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <label>Data de início</label>
    <type>Date</type>
</CustomField>